[gd_scene load_steps=18 format=3 uid="uid://cqajcooci127m"]

[ext_resource type="Texture2D" uid="uid://bq6rox6xglp6" path="res://assets/characters/Soldier.png" id="1_c7nrj"]
[ext_resource type="Script" path="res://scripts/player/player_new.gd" id="1_ikw4v"]
[ext_resource type="Script" path="res://scripts/player/implementations/soldier_attack.gd" id="3_4vmva"]
[ext_resource type="PackedScene" uid="uid://cytqxkpk1tyae" path="res://scenes/weapons/sword.tscn" id="4_rlmmc"]

[sub_resource type="Animation" id="Animation_8uia6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attacks/basic_attack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attacks/medium_attack/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_to60e"]
resource_name = "basic_attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attacks/basic_attack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_reset"
}]
}

[sub_resource type="Animation" id="Animation_j21lf"]
resource_name = "dead"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_8cdq3"]
resource_name = "heavy_attack"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 44]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_reset"
}]
}

[sub_resource type="Animation" id="Animation_to6k5"]
resource_name = "idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_e4865"]
resource_name = "medium_attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attacks/medium_attack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_reset"
}]
}

[sub_resource type="Animation" id="Animation_76kkv"]
resource_name = "receive_damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48]
}

[sub_resource type="Animation" id="Animation_hgyb4"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14, 15, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_37fdf"]
_data = {
"RESET": SubResource("Animation_8uia6"),
"basic_attack": SubResource("Animation_to60e"),
"dead": SubResource("Animation_j21lf"),
"heavy_attack": SubResource("Animation_8cdq3"),
"idle": SubResource("Animation_to6k5"),
"medium_attack": SubResource("Animation_e4865"),
"receive_damage": SubResource("Animation_76kkv"),
"walk": SubResource("Animation_hgyb4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_37phq"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2qlqe"]
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hubld"]
size = Vector2(21, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_twtfw"]
radius = 6.0
height = 20.0

[node name="Soldier" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ikw4v")

[node name="animation_movment_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_37fdf")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
y_sort_enabled = true
texture = ExtResource("1_c7nrj")
hframes = 9
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_37phq")

[node name="Attacks" type="Node2D" parent="."]
visible = false
script = ExtResource("3_4vmva")

[node name="basic_attack" type="Area2D" parent="Attacks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/basic_attack"]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2qlqe")
debug_color = Color(0.830986, 0.313482, 0.609053, 0.42)

[node name="medium_attack" type="Area2D" parent="Attacks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/medium_attack"]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("RectangleShape2D_hubld")
debug_color = Color(0.830986, 0.313482, 0.609053, 0.42)

[node name="heavy_attack" type="Marker2D" parent="Attacks"]

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_twtfw")
debug_color = Color(0.846756, 0.270219, 0.663805, 0.42)

[node name="health_reg_timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="Sword" parent="." instance=ExtResource("4_rlmmc")]
y_sort_enabled = false
position = Vector2(0, -1)

[connection signal="body_entered" from="Attacks/basic_attack" to="Attacks" method="_on_basic_attack_body_entered"]
[connection signal="body_entered" from="Attacks/medium_attack" to="Attacks" method="_on_medium_attack_body_entered"]
[connection signal="timeout" from="health_reg_timer" to="." method="_on_health_reg_timer_timeout"]
